//!  Delulu Travel Agent
//!
//!  Copyright (C) 2026  Mamy Ratsimbazafy
//!
//!  This program is free software: you can redistribute it and/or modify
//!  it under the terms of the GNU Affero General Public License as published by
//!  the Free Software Foundation, either version 3 of the License, or
//!  (at your option) any later version.
//!
//!  This program is distributed in the hope that it will be useful,
//!  but WITHOUT ANY WARRANTY; without even the implied warranty of
//!  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
//!  GNU Affero General Public License for more details.
//!
//!  You should have received a copy of the GNU Affero General Public License
//!  along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";
package google_hotels_travel;

message TravelSearchParams {
  int32 version = 1;
  Guests guests = 2;
  SearchParams search_params = 3;
  FilterConfig filter_config = 5;
}

message Guests {
  repeated GuestEntry entries = 1;
  bool explicit_selection = 2;
}

enum GuestKind {
  GUEST_KIND_UNSPECIFIED = 0;
  CHILD = 2;
  ADULT = 3;
}

message GuestEntry {
  GuestKind kind = 1;
  int32 age = 2;
}

message SearchParams {
  LocationData location = 1;
  DateWrapper dates = 2;
}

message LocationData {
  LocationDetails details = 2;
  UnknownMessage marker = 3;
}

message LocationDetails {
  string location_id = 1;
  string coordinates = 6;
  string display_name = 7;
}

message UnknownMessage {
  int32 flags = 1;
}

message DateWrapper {
  DateRange date_range = 2;
  UnknownMessage flags = 6;
}

message DateRange {
  DateDetails checkin = 1;
  DateDetails checkout = 2;
  int32 nights = 3;
}

message DateDetails {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}

message FilterConfig {
  FilterData filters = 1;
  UnknownMessage padding = 3;
  PriceData price_data = 4;
  int32 guest_rating = 5;
}

message FilterData {
  repeated Amenity amenity = 1;
  repeated int32 stars = 2;
  UnknownMessage padding = 3;
  SortType sort_type = 5;
  string currency = 7;
}

enum SortType {
  RELEVANCE = 0;
  LOWEST_PRICE = 3;
  HIGHEST_RATING = 8;
  MOST_REVIEWED = 13;
}

message PriceData {
  PriceValue min_price = 1;
  PriceValue max_price = 2;
  int32 unknown_price_marker = 3;
}

message PriceValue {
  int32 value = 2;
}

enum Amenity {
  AMENITY_UNSPECIFIED = 0;
  INDOOR_POOL = 4;
  OUTDOOR_POOL = 5;
  POOL = 6;
  SPA = 10;
  KID_FRIENDLY = 12;
  AIR_CONDITIONED = 40;
  EV_CHARGER = 61;
}
